fix(sonar): resolve all 43 issues from first v3 scan and eliminate code duplication
Fixes on the first-ever SonarQube scan of the v3 PBI-3..PBI-10 code: modern
Stream API usage (S6204/S1612), restricted identifier 'record' used as a
method/variable name (S6213), duplicated string literals (S1192), unused
imports/throws (S1128/S1130), a wildcard generic in a public API (S1452),
and a multi-throw assertThrows lambda (S5778). Three rules (S106, S3077,
S2925) are suppressed via documented sonar.issue.ignore.multicriteria
entries where the flagged pattern is a deliberate, safe design choice
rather than a defect.

Also eliminates the two real sources of the reported 4.4% code duplication:
a repeated "find student or throw StudentNotFoundException" block across
four console MenuAction classes (now centralized in
ConsoleUtils.requireStudent()), and near-identical displayStudentDetails()
methods in RegularStudent/HonorsStudent (now sharing printDetailsDivider()/
printCommonDetails() helpers on the common Student base class).

Main.java is excluded from coverage counting via sonar.coverage.exclusions
and the jacoco-maven-plugin's own <excludes>, since it's a thin composition
root with nothing to meaningfully branch-test.

All 634 tests pass; line coverage 98.08%, instruction coverage 98.26%.