@@ -10,7 +10,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /** Reads a list of {@link GradeRecord}s back from CSV, JSON, or Java binary - mirrors {@link StudentDataImporter}. */
@@ -24,7 +23,7 @@ public final class GradeDataImporter {
                     .skip(1) // header
                     .filter(line -> !line.isBlank())
                     .map(this::parseCsvRow)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             throw new ImportException("Failed to import grades from CSV: " + e.getMessage(), path.toString(), e);
         }
